Добавлены стили для секций конструктора (контакты), реализовано переключение видимости секций через CSS-классы, обновлена HTML-структура для корректного отображения блоков при адаптивной верстке.

--- a/index.html
+++ b/index.html
@@ -224,17 +224,37 @@
                 </div>
               </div>
             </div>
+
+            <div data-section="contact" id="item-contact" class="section item-hidden">
+              <div class="item-main-header">
+                <h3>Контактная информация</h3>
+              </div>
+              <div class="item-contact-body">
+                <div>
+                  <label for="phone">Номер телефона</label><br />
+                  <input type="tel" id="phone" spellcheck="false" />
+                </div>
+                <div>
+                  <label for="email">Электронная почта</label><br />
+                  <input type="email" id="email" required spellcheck="false" />
+                </div>
+                <div class="add-social">
+                  <button>Указать социальную сеть</button>
+                </div>
+              </div>
+            </div>
+
           </div>
-          <div class="creator-footer">
-            Footer
-            <button class="save-button">
-              <span>Сохранить и сформировать</span>
-            </button>
-            <button class="next-button">
-              <span>Следующий этап</span>
-              <span class="next-step"></span>
-            </button>
-          </div>
+            <div class="creator-footer">
+              Footer
+              <button class="save-button">
+                <span>Сохранить и сформировать</span>
+              </button>
+              <button class="next-button">
+                <span>Следующий этап</span>
+                <span class="next-step"></span>
+              </button>
+            </div>
         </div>
         <div class="preview-resume" style="color: navy; background: lightgray;">
           Предварительный просмотр
